--- a/www/home.html
+++ b/www/home.html
@@ -1,7 +1,7 @@
 <div class="row-fluid">
 	<div class="span10">
 		<div class="hero-unit">
-			<h1>Study Center</h1>
+			<!-- <h1>Study Center</h1> -->
 		  <p>
 		    <a class="btn btn-primary btn-large" href="#">Test</a>
 		    </a>
