--- a/www/index.html
+++ b/www/index.html
@@ -19,25 +19,9 @@
 	</head>
 	
 	<body>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-				<div id="header">
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-12">
-				<div id="content">
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-12">
-				<div id="footer">
-				</div>
-			</div>
-		</div>		
-	</div>
+		<div id="header"></div>
+		<div id="content"></div>
+		<div id="sidebar"></div>
+		<div id="footer"></div>
 	</body>
 </html>
